--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,11 @@
 .App{
+    width: 100vw;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box;
-}
-
-.App h1{
-    width: 500px;
-    height: 100px;
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 70px;
-    margin: 30px;
-    border-radius: 8px;
+    margin-top: 100px;
 }
 
 .title-cart{
