--- a/src/Header/CartComponents/Cart.module.css
+++ b/src/Header/CartComponents/Cart.module.css
@@ -1,5 +1,50 @@
-.cart-container{
-  height: 200px;
-  width: 300px;
-  background-color: aqua;
+.cart-container {
+  height: 80px;
+  width: 15vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #eee;
+  border-radius: 50px;
+  background-color: rgb(82, 13, 88);
+  cursor: pointer;
+}
+
+.cart-container img {
+  width: 50px;
+}
+
+.cart-container:hover {
+  color: #dfe65d;
+  border: 2px solid #dfe65d;
+  height: 83px;
+}
+
+.cartInputs {
+  display: flex;
+  flex-direction: column;
+  width: 60px;
+  align-items: center;
+}
+
+.cartInputs h3 {
+  font-weight: lighter;
+  color: #eee;
+}
+
+.cartInput {
+  width: 30px;
+  height: 30px;
+  border: solid 2px #eee;
+  padding: 2px;
+  margin: 2px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #eee;
+}
+
+.cartInput:hover {
+  color: #dfe65d;
 }
