--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -1,3 +1,55 @@
-h1{
-  background-color: aqua;
+.mainContainer {
+  background-color: #ED1C2C;
+  margin-top: 16px;
+  height: 400px;
+  width: 80%;
+  border-radius: 15px;
+  box-shadow: 0 0 10px 0 #000;
+  
+}
+
+.mainContainer h1 {
+  background-color: #ED1C2C;
+  text-align: center;
+  border-radius: 15px;
+  color: #eee;
+  margin-top: 15px;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  font-size: 36px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.infoContainer {
+  background-color: #ED1C2C;
+  display: flex;
+  width: 100%;
+  height: 90%;
+  border-radius: 15px;
+}
+
+.imageContainer {
+  width: 50%;
+  margin: 15px;
+  border-radius: 5px;
+}
+
+.imageContainer img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.description {
+  background-color: rgb(82, 13, 88);
+  width: 50%;
+  padding: 15px;
+  margin: 15px;
+  border-radius: 5px;
+  color: #eee;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-weight: bolder;
+  font-size: 15px;
 }
