--- a/src/UI/Modal.module.css
+++ b/src/UI/Modal.module.css
@@ -49,22 +49,51 @@
   background: rgba(0, 0, 0, 0.75);
 }
 
+
+
 .cart-container {
   width: 50%;
   background-color: #eee;
-  position: fixed;
+  position: absolute;
   top: 25vh;
   left: 25%;
   z-index: 100;
   padding: 10px;
+  border-radius: 15px;
 }
 
-.items-container {
+.cart-container h2 {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  margin: 5px;
+  padding: 15px;
+  font-weight: lighter;
+  letter-spacing: 1.5px;
+  border-radius: 50px;
+  width: 150px;
+  background-color: rgb(82, 13, 88);
+  color: #eee;
+  text-align: center;
+}
+
+.itemsContainer {
+  background-color: #ddd;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #f00;
+  border-radius: 15px;
+  margin-bottom: 5px;
+}
+
+.itemsContainerInactive {
   background-color: brown;
   width: 100%;
   height: 50px;
   color: #eee;
-  display: flex;
+  display: none;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
@@ -74,10 +103,19 @@
 
 .actions {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  background-color: blue;
   width: 30%;
-  
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 20px;
+  font-weight: lighter;
+}
+
+.itemsContainer label {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 20px;
+  font-weight: lighter;
+  letter-spacing: 2px;
 }
 
 .actions input {
@@ -85,3 +123,79 @@
   text-align: center;
 }
 
+.totalContainer {
+  background-color: #ED1C2C;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #f00;
+  border-radius: 15px;
+  margin-bottom: 5px;
+}
+
+.buttonCerrar {
+  width: 60px;
+  height: 30px;
+  margin-left: 15px;
+  background-color: #ddd;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.buttonCerrar:hover {
+  background-color: #aaa;
+  font-weight: bolder;
+}
+
+.buttonPagar {
+  width: 80px;
+  height: 40px;
+  margin-left: 15px;
+  background-color: #080;
+  border: 0;
+  border-radius: 5px;
+  font-weight: bolder;
+  font-size: larger;
+  color: #eee;
+  box-shadow: 0 0 3px 0 #eee;
+  cursor: pointer;
+}
+
+.buttonPagar:hover {
+  height: 42px;
+  width: 82px;
+  background-color: #0a0;
+  box-shadow: 0 0 6px 0 #eee;
+}
+
+.totals {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 30%;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 25px;
+  font-weight: lighter;
+  padding: 15px;
+  color: #eee;
+}
+
+.totals input {
+  width: 62px;
+  text-align: center;
+}
+
+.totals span {
+  text-align: center;
+}
+
+.emptyCart {
+  margin: 15px;
+  padding: 15px;
+  font-size: 20px;
+  font-weight: bolder;
+}
