--- a/src/Header/CartComponents/Cart.module.css
+++ b/src/Header/CartComponents/Cart.module.css
@@ -8,10 +8,20 @@
   border-radius: 50px;
   background-color: rgb(82, 13, 88);
   cursor: pointer;
+
+  @media (max-width: 550px) {
+    border: 0;
+    height: auto;
+    padding: 10px;
+  }
 }
 
 .cart-container img {
   width: 50px;
+
+  @media (max-width: 850px) {
+    display: none;
+  }
 }
 
 .cart-container:hover {
@@ -30,6 +40,10 @@
 .cartInputs h3 {
   font-weight: lighter;
   color: #eee;
+
+  @media (max-width: 550px) {
+    
+  }
 }
 
 .cartInput {
@@ -43,6 +57,10 @@
   justify-content: center;
   align-items: center;
   color: #eee;
+
+  @media (max-width: 550px) {
+    display: none;
+  }
 }
 
 .cartInput:hover {
