--- a/src/Header/Navigation.module.css
+++ b/src/Header/Navigation.module.css
@@ -9,6 +9,13 @@
   margin: 0;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   box-shadow: 0 0 10px 0 #000;
+
+  @media (max-width: 550px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 150px;
+  }
 }
 
 .actionContainer {
@@ -16,6 +23,17 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+
+  @media (max-width: 700px) {
+    justify-content: space-between;
+    width: 90%;
+    margin-top: 0;
+  }
+
+  @media (max-width: 550px) {
+    width: 90%;
+    margin-top: 0;
+  }
 }
 
 .actionButtons {
@@ -24,6 +42,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media (max-width: 700px) {
+    justify-content: space-around;
+  }
 }
 
 .buttons {
@@ -51,6 +73,19 @@
   margin: 20px 30px;
   border-radius: 8px;
   text-decoration: none;
+
+  @media (max-width: 700px) {
+    font-size: 30px;
+    letter-spacing: 2px;
+  };
+
+  @media (max-width: 550px) {
+    font-size: 30px;
+    letter-spacing: 2px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    height: 30px;
+  };
 }
 
 .titleNav:hover {
